--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,11 @@ prometheus-client==0.19.0
 kubernetes==28.1.0
 pydantic==2.5.2
 uvicorn==0.24.0
+kubernetes==28.1.0
+nvidia-ml-py3==7.352.0
+fastapi==0.105.0
+python-dotenv==1.0.0
+PyYAML==6.0.1
+pytest==7.4.3
+pytest-asyncio==0.21.1
+docker==6.1.3
