--- a/gpu-management/pytest.ini
+++ b/gpu-management/pytest.ini
@@ -1,7 +1,5 @@
-# pytest.ini
 [pytest]
+asyncio_mode = auto
 python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
-addopts = -v
-testpaths = tests
+log_cli = true
+log_cli_level = INFO
